Add Phase 6: cost tracking, virtual threads, rate limiting, PII masking, Confluent Hub
- LLM cost calculator with per-model pricing (Anthropic + OpenAI) and cache multipliers
- Virtual threads for parallel LLM execution (Java 21), semaphore retained for throttling
- Token-bucket rate limiter on LLM API calls with metrics
- PII masking with field name + regex pattern matching, numbered placeholders, unmask support
- Confluent Hub packaging via maven-assembly-plugin (zip with lib/doc/etc/manifest.json)
- Compiled transforms from Phase 5 (GraalJS, declarative mappings, schema fingerprinting)
- Comprehensive tests for all new components (139 tests passing)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>